styles.css
/*Generale*/
:root {
    --background-color: rgb(206, 202, 202);
    --text-color: black;
    --titles-color: rgb(58, 153, 185);
    --elements-color: brown;
}
body {
    background-color: var(--background-color);
    color: var(--text-color)
}
a {
    color: var(--elements-color);
}
a:hover {
    color:var(--titles-color)
}
#Titolo{
    flex: 1 1 auto;
    margin: 0px;
    text-align: center;
}
.sottotitolo {
    color:var(--titles-color);
}
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: auto;
    color:var(--titles-color);
}
#github-page{
    flex: 1 0;
    margin-left: auto;
    margin-right: auto;
    max-width: fit-content;
}
#github-page img{
    width: 15vw;
    margin-left: auto;
    margin-right: auto;
    max-width: 60px;
    height: auto;
}
#Titolo a{
    color: var(--titles-color);
    text-decoration: none;
}
#Titolo a:hover{
    color:rgb(0, 145, 255)
}
footer {
    font-size: 13px;
}
/*Main home*/
.giorni{
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    flex-direction: row;
    max-width: fit-content;
    justify-content: space-between;
    margin-left: auto;
    margin-right: auto;
    gap: 10vw;
}
.giorni a{
    flex: 1 1 auto;
}
/*Orario*/
.materia {
    color: var(--elements-color);
}

